# PocketLibs

./: .editorconfig  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  casting.h  casting.hxx
.github/workflows/: build-examples.yaml  docs.yaml
docs/: .gitignore  book.dev.toml  book.toml  book.web.toml  build-graphs.bat  build-graphs.ps1  build-graphs.sh  build_graphs.py  tasklist.css
docs/graphs/guides/llvm-style-rtti/: inheritance-tree-adding-types-new-subtree-exercise.dot  inheritance-tree-adding-types-new-subtree.dot  inheritance-tree-adding-types-no-subtree.dot  inheritance-tree-starting-point.dot
docs/src/: SUMMARY.md  examples.md  overview.md  tutorials.md
docs/src/api/: casting.md
docs/src/guides/: LLVM-style-RTTI.md
docs/src/usage/: casting.md
docs/theme/: book.js  index.hbs
docs/theme/css/: general.css  variables.css
docs/theme/fonts/: fonts.css
examples/: CMakeLists.txt  casting_example.cxx
integration-example/: README.md
integration-example/casting/: .gitignore  CMakeLists.txt  README.md  meson.build
integration-example/casting/src/: main.cxx
